--- a/blocks/root.css
+++ b/blocks/root.css
@@ -1,26 +1,514 @@
-
+/* WRAPPER PAGE */
 .root {
-	box-sizing: border-box;
-	background: #2A2C2F;
-	min-width: 320px;
-	max-width: 1024px;
+	width: 1280px;
+	background-color: #2A2C2F;
+	font-family: 'Inter', sans-serif;
+	color: #FFFFFF;
+}
+
+
+/* BLOCK HEADER */
+.header {
 	margin: 0 auto;
+	padding: 28px 48px 0 48px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.header__logo {
+	width: 176px;
+	height: 52px;
+}
+
+.header__lang-links {
+	align-self: center;
+}
+
+.header__lang-link {
+	width: 30px;
+	height: 28px;
+	text-decoration: none;
+	color: #FFFFFF;
+	font-size: 24px;
+	font-weight: 400;
+	line-height: 28px;
+	letter-spacing: 0em;
+	text-align: right;
+
+}
+
+
+/* BLOCK MAIN */
+.main {
+	margin: 0 auto;
+
+}
+
+/* BLOCK LEAD */
+.lead {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 0 148px;
+}
+
+.lead__title {
+	margin: 56px 0 0 0;
+	height: 200px;
+	width: 720px;
+	border-radius: nullpx;
+	font-size: 96px;
+	font-weight: 900;
+	line-height: 100px;
+	letter-spacing: 0em;
+	text-align: center;
+
+
+}
+
+.lead__sub-title {
+	margin: 32px 0 0 0;
+	height: 72px;
+	width: 640px;
+	border-radius: nullpx;
+	font-size: 30px;
+	font-weight: 400;
+	line-height: 36px;
+	letter-spacing: 0em;
+	text-align: center;
+
+}
+
+.lead__map-image {
+	margin: 64px 0 0 0;
+	width: 984px;
+	height: 615px;
+	background: url(../images/lead/lead-background.png) no-repeat;
+	background-position: center;
+	background-size: contain;
+}
+
+.lead__map-point-travel {
+	transform: translate(5%, 40%);
+	object-fit: cover;
+}
+
+.lead__map-signature {
+	margin: 8px 0 0 0;
+	align-self: self-start;
+	font-size: 10px;
+	font-weight: 400;
+	line-height: 14px;
+	letter-spacing: 1.5px;
+	text-align: left;
+}
+
+
+/* BLOCK INTRO */
+.intro {
+	margin: 0 148px;
+	width: 690px;
+}
+
+.intro__title {
+	margin: 92px 0 0 0;
+	height: 58px;
+	border-radius: nullpx;
+	font-size: 54px;
+	font-weight: 900;
+	line-height: 58px;
+	letter-spacing: 0em;
+	text-align: left;
+
+
+}
+
+.intro__text-article {
+	margin: 40px 0 0 0;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 26px;
+	letter-spacing: 0em;
+	text-align: left;
+
+}
+
+.intro__list {
+	margin: 34px 0 0 0;
+	list-style: none;
+	padding: 0;
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 18px;
+	letter-spacing: 0em;
+	text-align: left;
+}
+
+.intro__list-marker {}
+
+.intro__list-item {}
+
+
+/* BLOCK PHOTO-GRID */
+.photo-grid {
+	margin: 92px 48px 0 48px;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	gap: 16px;
+}
+
+.photo-grid__item {
+	width: 284px;
+	height: 213px;
+}
+
+/* BLOCK PLACES */
+.places {}
+
+.card {
+	margin: 80px 148px 0 148px;
+	display: grid;
+	grid-template-columns: min-content 1fr;
+	grid-template-rows: min-content min-content;
+	grid-template-areas:
+		'title links'
+		'image description';
+	grid-gap: 48px 40px;
+
+}
+
+.card__title {
+	margin: 0;
+	grid-area: title;
+	font-size: 72px;
+	font-weight: 900;
+	line-height: 76px;
+	letter-spacing: 0em;
+	text-align: left;
+	align-self: flex-end;
+
+
+}
+
+.card__img {
+	grid-area: image;
+}
+
+.card__links {
+	grid-area: links;
+	align-self: flex-end;
+}
+
+.card__title-link {
+	color: #AAAAAA;
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 20px;
+	letter-spacing: 2px;
+	text-align: left;
+
+}
+
+.card__link {
+	color: #FFFFFF;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 22px;
+	letter-spacing: 0em;
+	text-align: left;
+
+}
+
+.card__description {
+	grid-area: description;
+}
+
+.card__paragraph {
+	margin: 26px 0 0 0;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 29px;
+	letter-spacing: 0em;
+	text-align: left;
+}
+
+.card__paragraph:first-of-type {
+	margin: 0;
+}
+
+
+/* BLOCK COVER */
+.cover {
+	margin: 92px 48px 0 48px;
+	width: 1184px;
+	height: 740px;
+	background: url(../images/cover/cover-background.png) center no-repeat;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
 
-.lead__map-image {
-	background: url(../images/lead/lead-background.png) no-repeat;
+.cover__title {
+	height: 152px;
+	width: 560px;
+	font-size: 72px;
+	font-weight: 900;
+	line-height: 76px;
+	letter-spacing: 0em;
+	text-align: center;
+	opacity: 1;
+
+
 }
 
+.cover__subtitle {
+	height: 66px;
+	width: 360px;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 22px;
+	letter-spacing: 0em;
+	text-align: center;
+
+}
+
+/* BLOCK FOOTER */
+.footer {
+	display: flex;
+	justify-content: space-between;
+	margin: 92px 48px 0 48px;
+	padding-bottom: 24px;
+}
+
+.footer__menu {}
+
+.footer__link {
+	margin: 0 18px 0 0;
+	color: #FFFFFF;
+	text-decoration: none;
+}
+
+.footer__copyright {}
+
+
+@media screen and (max-width:320px) {
+
+	/* BLOCK HEADER */
+	.root {
+		width: 320px;
+	}
+
+	.header {
+		padding: 16px 16px 0 16px;
+	}
+
+	.header__logo {
+		width: 142px;
+		height: 42px;
+	}
+
+	.header__lang-links {}
+
+	.header__lang-link {
+		width: 22px;
+		height: 20px;
+		font-size: 18px;
+		line-height: 20px;
+	}
+
+	/* BLOCK MAIN */
+	.main {}
+
+	/* BLOCK LEAD */
+	.lead {
+		margin: 0 16px;
+	}
+
+	.lead__title {
+		margin: 48px 0 0 0;
+		width: 288px;
+		height: 88px;
+		font-size: 40px;
+		font-weight: 900;
+		line-height: 44px;
+	}
+
+	.lead__sub-title {
+		margin: 32px 0 0 0;
+		width: 288px;
+		height: 40px;
+		font-size: 16px;
+		line-height: 20px;
+	}
+
+	.lead__map-image {
+		margin: 40px 0 0 0;
+		width: 320px;
+		height: 200px;
+		background: url(../images/lead/lead-background.png) no-repeat;
+		background-position: center;
+		background-size: contain;
+	}
+
+	.lead__map-point-travel {
+		width: 100%;
+		height: 100%;
+		transform: translate(0);
+		object-fit: contain;
+	}
+
+	.lead__map-signature {}
+
+	/* BLOCK INTRO */
+	.intro {
+		margin: 0 16px;
+		width: 288px;
+	}
+
+	.intro__title {
+		margin: 64px 0 0 0;
+		font-size: 32px;
+		line-height: 35px;
+	}
+
+	.intro__text-article {}
+
+	.intro__list {
+		margin: 16px 0 0 0;
+		list-style: none;
+		padding: 0;
+		font-size: 12px;
+		line-height: 18px;
+	}
+
+	.intro__list-marker {
+		color: #AAAAAA;
+
+	}
+
+	.intro__list-item {}
+
+	/* BLOCK PHOTO-GRID */
+.photo-grid {
+	margin: 64px 16px 0 16px;
+	display: grid;
+	grid-template-columns: 1fr;
+}
+
+.photo-grid__item {
+	width: 288px;
+	height: 216px;
+}
+
+/* BLOCK PLACES */
+.places {}
+
+.card {
+	margin: 50px 0 0 0;
+	display: grid;
+	grid-template-columns: 100%;
+	grid-template-rows: repeat(4, max-content);
+	grid-template-areas:
+		'title'
+		'links'
+		'image'
+		'description';
+		grid-gap: 32px 0;
+}
+
+.card__title {
+	margin: 0px 16px 0 16px;
+	font-size: 32px;
+	line-height: 35px;
+}
+
+.card__img {
+	margin: 0px;
+	grid-area: image;
+	width: 320px;
+	height: 320px;
+}
+
+.card__links {
+	margin: 0px 16px 0 16px;
+	grid-area: links;
+	align-self: flex-end;
+}
+
+.card__title-link {
+	margin: 0px 16px 0 16px;;
+}
+
+.card__link {
+	margin: 12px 0 0 0;
+}
+
+.card__description {
+	grid-area: description;
+}
+
+.card__paragraph {
+	margin: 25px 16px 0 16px;
+	font-size: 16px;
+	line-height: 26px;
+}
+
+.card__paragraph:first-of-type {
+	margin: 0px 16px 0 16px;
+}
+
+/* BLOCK COVER */
 .cover {
-	background: url(../images/cover/cover-background.png);
+	margin: 66px 0 0 0;
+	max-width: 320px;
+	height: 200px;
+	background: url(../images/cover/cover-background.png) center no-repeat;
+	background-size: contain;
+	justify-content: flex-start;
 }
 
-.intro {
-	margin: 0 48px;
-	color: white;
-	width: 60%;
+.cover__title {
+	margin: 33px 16px 0 16px;
+	width: 288px;
+	height: 70px;
+	font-size: 32px;
+	line-height: 35px;
+}
+
+.cover__subtitle {
+	margin: 16px 16px 0 16px;
+	width: 288px;
+	height: 48px;
+	font-size: 14px;
+	line-height: 16px;
+}
+
+/* BLOCK FOOTER */
+.footer {
+	display: flex;
+	flex-direction: column;
+	margin: 0;
+	padding-bottom: 24px;
+}
+
+.footer__menu {
+	margin: 32px 0 0 0;
+	display: flex;
+	flex-direction: column;
+}
+
+.footer__link {
+	margin: 32px 0 0 16px;
+	color: #FFFFFF;
+	text-decoration: none;
+	font-size: 24px;
+	line-height: 24px;
+}
+
+.footer__copyright {
+	margin: 48px 0 0 16px;
+	font-size: 14px;
+	line-height: 14px;
+}
 }
