--- a/blocks/root.css
+++ b/blocks/root.css
@@ -2,9 +2,7 @@
 
 
 /* WRAPPER PAGE */
-body {
-    
-}
+body {}
 
 .root {
     min-width: 350px;
@@ -114,11 +112,11 @@ body {
 
 .intro {
     margin: 0 148px;
-    width: 53.90625%;
+    width: 690px;
 }
 
 .intro__title {
-    margin: 7.1875% 0 0 0;
+    margin: 92px 0 0 0;
     font-size: 54px;
     font-weight: 900;
     line-height: 58px;
@@ -127,7 +125,7 @@ body {
 }
 
 .intro__text {
-    margin: 3.125% 0 0 0;
+    margin: 40px 0 0 0;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
@@ -136,7 +134,7 @@ body {
 }
 
 .intro__list {
-    margin: 2.65625% 0 0 0;
+    margin: 33px 0 0 0;
     list-style: none;
     padding: 0;
     font-size: 12px;
@@ -174,8 +172,8 @@ body {
 .card {
     margin: 92px 148px 0 148px;
     display: grid;
-    grid-template-columns: min-content 1fr;
-    grid-template-rows: min-content min-content;
+    grid-template-columns: 460px 1fr;
+
     grid-template-areas: 'title links''image description';
     grid-gap: 48px 40px;
 }
@@ -210,6 +208,7 @@ body {
 }
 
 .card__link {
+    display: block;
     color: #FFFFFF;
     font-size: 18px;
     font-weight: 400;
@@ -254,6 +253,7 @@ body {
 }
 
 .cover__container-title {
+    height: 100%;
     position: absolute;
     top: center;
     left: center;
@@ -305,221 +305,11 @@ body {
 
     /* BLOCK HEADER */
     .root {
-        width: 320px;
-    }
-
-    .header {}
-
-    .header__logo {
-        width: 142px;
-        height: 42px;
-    }
-
-    .header__lang-links {}
-
-    .header__lang-link {
-        width: 22px;
-        height: 20px;
-        font-size: 18px;
-        line-height: 20px;
-    }
-
-    /* BLOCK MAIN */
-    .main {}
-
-    /* BLOCK LEAD */
-    .lead {
-        margin: 0 16px;
-    }
-
-    .lead__title {
-        margin: 48px 0 0 0;
-        width: 288px;
-        height: 88px;
-        font-size: 40px;
-        font-weight: 900;
-        line-height: 44px;
-    }
-
-    .lead__sub-title {
-        margin: 32px 0 0 0;
-        width: 288px;
-        height: 40px;
-        font-size: 16px;
-        line-height: 20px;
-    }
-
-    .lead__image {
-        margin: 40px 0 0 0;
-        width: 320px;
-        height: 200px;
-    }
-
-    .lead__map-point-travel {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-    }
-
-    .lead__map-signature {}
-
-    /* BLOCK INTRO */
-    .intro {
-        margin: 0 16px;
-        width: 288px;
-    }
-
-    .intro__title {
-        margin: 64px 0 0 0;
-        font-size: 32px;
-        line-height: 35px;
-    }
-
-    .intro__text {}
-
-    .intro__list {
-        margin: 16px 0 0 0;
-        list-style: none;
-        padding: 0;
-        font-size: 12px;
-        line-height: 18px;
-    }
-
-    .intro__list-marker {
-        color: #AAAAAA;
-    }
-
-    .intro__list-item {}
-
-    /* BLOCK PHOTO-GRID */
-    .photo-grid {
-        /* margin: 64px 16px 0 16px; */
-        display: grid;
-        grid-template-columns: 1fr;
-    }
-
-    .photo-grid__item {
-        max-width: 100%;
-        object-fit: contain;
-    }
-
-    /* BLOCK PLACES */
-    .places {}
-
-    .card {
-        margin: 50px 0 0 0;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(4, max-content);
-        grid-template-areas: 'title''links''image''description';
-        grid-gap: 32px 0;
-    }
-
-    .card__title {
-        margin: 0px 16px 0 16px;
-        font-size: 32px;
-        line-height: 35px;
-    }
-
-    .card__img {
-        margin: 0px;
-        grid-area: image;
-        width: 320px;
-        height: 320px;
-    }
-
-    .card__links {
-        margin: 0px 16px 0 16px;
-        grid-area: links;
-        align-self: flex-end;
-    }
-
-    .card__title-link {
-        margin: 0px 16px 0 16px;
-        ;
-    }
-
-    .card__link {
-        margin: 12px 0 0 0;
-    }
-
-    .card__description {
-        grid-area: description;
-    }
-
-    .card__paragraph {
-        margin: 25px 16px 0 16px;
-        font-size: 16px;
-        line-height: 26px;
-    }
-
-    .card__paragraph:first-of-type {
-        margin: 0px 16px 0 16px;
-    }
-
-    /* BLOCK COVER */
-    .cover {
-        margin: 66px 0 0 0;
-        max-width: 320px;
-        height: 200px;
-        background: url(../images/cover/cover-background.png) center no-repeat;
-        background-size: contain;
-        justify-content: flex-start;
-    }
-
-    .cover__title {
-        margin: 33px 16px 0 16px;
-        width: 288px;
-        height: 70px;
-        font-size: 32px;
-        line-height: 35px;
-    }
-
-    .cover__subtitle {
-        margin: 16px 16px 0 16px;
-        width: 288px;
-        height: 48px;
-        font-size: 14px;
-        line-height: 16px;
-    }
-
-    /* BLOCK FOOTER */
-    .footer {
-        display: flex;
-        flex-direction: column;
-        margin: 0;
-        padding-bottom: 24px;
-    }
-
-    .footer__menu {
-        margin: 32px 0 0 0;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .footer__link {
-        margin: 32px 0 0 16px;
-        color: #FFFFFF;
-        text-decoration: none;
-        font-size: 24px;
-        line-height: 24px;
-    }
-
-    .footer__copyright {
-        margin: 48px 0 0 16px;
-        font-size: 14px;
-        line-height: 14px;
-    }
-}
-
-@media screen and (max-width:768px) {
-
-    /* BLOCK HEADER */
-    .root {
-        width: 100vw;
+        min-width: 320px;
     }
 
     .header {
+        margin: 0 auto;
         padding: 16px 16px 0 16px;
     }
 
@@ -528,8 +318,6 @@ body {
         height: 42px;
     }
 
-    .header__lang-links {}
-
     .header__lang-link {
         width: 22px;
         height: 20px;
@@ -541,12 +329,8 @@ body {
     .main {}
 
     /* BLOCK LEAD */
-    .lead {
-        margin: 0 16px;
-    }
-
     .lead__title {
-        margin: 48px 0 0 0;
+        margin: 48px 16px 0 16px;
         width: 288px;
         height: 88px;
         font-size: 40px;
@@ -555,35 +339,26 @@ body {
     }
 
     .lead__sub-title {
-        margin: 32px 0 0 0;
+        margin: 32px auto 0 auto;
         width: 288px;
         height: 40px;
         font-size: 16px;
         line-height: 20px;
     }
 
-    .lead__map-image {
+    .lead__image {
         margin: 40px 0 0 0;
-        width: 320px;
-        height: 200px;
-        background: url(../images/lead/lead-background.png) no-repeat;
-        background-position: center;
-        background-size: contain;
+        min-width: 320px;
     }
+    .lead__caption {
+        margin: 8px 0 0 16px;
 
-    .lead__map-point-travel {
-        width: 100%;
-        height: 100%;
-        transform: translate(0);
-        object-fit: contain;
     }
-
-    .lead__caption {}
 
     /* BLOCK INTRO */
     .intro {
         margin: 0 16px;
-        width: 288px;
+        width: 100%;
     }
 
     .intro__title {
@@ -592,7 +367,9 @@ body {
         line-height: 35px;
     }
 
-    .intro__text-article {}
+    .intro__text {
+        margin: 40px 0 0 0;
+    }
 
     .intro__list {
         margin: 16px 0 0 0;
@@ -602,38 +379,29 @@ body {
         line-height: 18px;
     }
 
-    .intro__list-marker {
-        color: #AAAAAA;
-    }
-
-    .intro__list-item {}
-
     /* BLOCK PHOTO-GRID */
     .photo-grid {
         margin: 64px 16px 0 16px;
-        display: grid;
         grid-template-columns: 1fr;
-    }
-
-    .photo-grid__item {
-        width: 288px;
-        height: 216px;
+        gap: 12px;
     }
 
     /* BLOCK PLACES */
-    .places {}
+    .places {
+        margin: 64px 0 0 0;
+    }
 
     .card {
         margin: 50px 0 0 0;
         display: grid;
-        grid-template-columns: 100%;
+        grid-template-columns: 1fr;
         grid-template-rows: repeat(4, max-content);
         grid-template-areas: 'title''links''image''description';
         grid-gap: 32px 0;
     }
 
     .card__title {
-        margin: 0px 16px 0 16px;
+        margin: 0 16px 0 16px;
         font-size: 32px;
         line-height: 35px;
     }
@@ -646,18 +414,16 @@ body {
     }
 
     .card__links {
-        margin: 0px 16px 0 16px;
         grid-area: links;
         align-self: flex-end;
     }
 
     .card__title-link {
-        margin: 0px 16px 0 16px;
-        ;
+        margin: 0 16px 0 16px;
     }
 
     .card__link {
-        margin: 12px 0 0 0;
+        margin: 12px 16px 0 16px;
     }
 
     .card__description {
@@ -677,15 +443,17 @@ body {
     /* BLOCK COVER */
     .cover {
         margin: 66px 0 0 0;
-        max-width: 320px;
+        max-width: 100%;
         height: 200px;
-        background: url(../images/cover/cover-background.png) center no-repeat;
-        background-size: contain;
-        justify-content: flex-start;
+
+    }
+
+    .cover__container-title {
+        margin: 0 16px 0 16px;
     }
 
     .cover__title {
-        margin: 33px 16px 0 16px;
+        margin: 33px 0 0 0;
         width: 288px;
         height: 70px;
         font-size: 32px;
@@ -693,11 +461,12 @@ body {
     }
 
     .cover__subtitle {
-        margin: 16px 16px 0 16px;
+        margin: 16px 0 0 0;
         width: 288px;
         height: 48px;
         font-size: 14px;
         line-height: 16px;
+        
     }
 
     /* BLOCK FOOTER */
