--- a/pages/index.css
+++ b/pages/index.css
@@ -1,18 +1,23 @@
 /* Обнуляющие стили */
-@import url(./vendor/normalize.css);
+
+@import url(../vendor/normalize.css);
 
 /* Обертка главной страницы */
+
 @import url(../blocks/root.css);
 
 /* Логотипы */
+
 @import url(../blocks/logo/__language/logo__language.css);
 
 /* Блок Header */
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
 
 /* Блок Header */
+
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__map-image/lead__map-image.css);
 @import url(../blocks/lead/__map-point-travel/lead__map-point-travel.css);
