--- a/pages/index.css
+++ b/pages/index.css
@@ -1,26 +1,57 @@
-/* Обнуляющие стили */
-
+/* обнуляющие стили (NORMALIZE)*/
 @import url(../vendor/normalize.css);
 
-/* Обертка главной страницы */
+/* обертка главной страницы (ROOT) */
 
-@import url(../blocks/root.css);
-
-/* Логотипы */
-
-@import url(../blocks/logo/__language/logo__language.css);
-
-/* Блок Header */
+@import url(../blocks/root/root.css);
+/* блок HEADER */
 
 @import url(../blocks/header/header.css);
-@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
+@import url(../blocks/header/__logo/header__logo.css);
 
-/* Блок Header */
-
+/* блок LEAD */
 @import url(../blocks/lead/lead.css);
-@import url(../blocks/lead/__map-image/lead__map-image.css);
-@import url(../blocks/lead/__map-point-travel/lead__map-point-travel.css);
-@import url(../blocks/lead/__map-signature/lead__map-signature.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
+@import url(../blocks/lead/__image-background/lead__image-background.css);
+@import url(../blocks/lead/__image-map/lead__image-map.css);
+@import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__sub-title/lead__sub-title.css);
 @import url(../blocks/lead/__title/lead__title.css);
+
+/* блок INTRO */
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__title/intro__title.css);
+
+/* блок PHOTO-GRID*/
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
+
+/* блок PLACES*/
+@import url(../blocks/places/places.css);
+
+/* блок PLACE*/
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__description/place__description.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__url-heading/place__url-heading.css);
+@import url(../blocks/place/__website/place__website.css);
+
+/* блок COVER*/
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__background/cover__background.css);
+@import url(../blocks/cover/__headings/cover__headings.css);
+@import url(../blocks/cover/__sub-title/cover__sub-title.css);
+@import url(../blocks/cover/__title/cover__title.css);
+
+/* блок FOOTER*/
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__menu/footer__menu.css);
