--- a/blocks/intro/__list-item/intro__list-item.css
+++ b/blocks/intro/__list-item/intro__list-item.css
@@ -1,4 +1,4 @@
-.header__lang-links {}
+.intro__list-item {}
 @media screen and (max-width: 320px) {}
 @media screen and (min-width: 768px) {}
 @media screen and (min-width: 1024px) {}
