--- a/blocks/intro/__list-marker/intro__list-marker.css
+++ b/blocks/intro/__list-marker/intro__list-marker.css
@@ -1,4 +1,6 @@
-.header__lang-links {}
+.intro__list-marker {
+    color: #AAAAAA;
+}
 @media screen and (max-width: 320px) {}
 @media screen and (min-width: 768px) {}
 @media screen and (min-width: 1024px) {}
