--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,571 +1,25 @@
   /*! Оптимизировать шрифты(сглаживание) */
   /* WRAPPER PAGE */
-  
+
   body {
-      margin: 0 auto;
-      padding: 0;
-  }
-  
-  .root {
-      min-width: 350px;
-      max-width: 1280px;
-      margin: 0 auto;
-      background-color: #2A2C2F;
-      font-family: 'Inter', sans-serif;
-      color: #FFFFFF;
-      overflow: hidden;
-  }
-  /* BLOCK HEADER */
-  
-  .header {
-      margin: 0 auto;
-      padding: 28px 48px 0 48px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-  }
-  
-  .header__logo {
-      width: 176px;
-      height: 52px;
-  }
-  
-  .header__lang-links {}
-  
-  .header__lang-link {
-      width: 30px;
-      height: 28px;
-      text-decoration: none;
-      color: #FFFFFF;
-      font-size: 1.5em;
-      font-weight: 400;
-      line-height: 28px;
-      letter-spacing: 0em;
-      text-align: right;
-  }
-  /* BLOCK LEAD */
-  
-  .lead {
-      margin: 56px 0 0 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-  }
-  
-  .lead__title {
-      margin: 0 auto;
-      max-width: 720px;
-      font-size: 6em;
-      font-weight: 900;
-      line-height: 100px;
-      letter-spacing: 0em;
-      text-align: center;
-  }
-  
-  .lead__sub-title {
-      margin: 32px 0 0 0;
-      max-width: 640px;
-      font-size: 30px;
-      font-weight: 400;
-      line-height: 36px;
-      letter-spacing: 0em;
-      text-align: center;
-  }
-  
-  .lead__image {
-      margin: 64px 0 0 0;
-      max-width: 984px;
-      position: relative;
-  }
-  
-  .lead__image-background {
-      max-width: 100%;
-      object-fit: cover;
-  }
-  
-  .lead__image-map {
-      width: 94%;
-      object-fit: cover;
-      position: absolute;
-      top: 15%;
-      left: 3%;
-      z-index: 2;
-  }
-  
-  .lead__caption {
-      margin: 8px 0 0 0;
-      font-size: 10px;
-      font-weight: 400;
-      line-height: 14px;
-      letter-spacing: 1.5px;
-      text-align: left;
-  }
-  /* BLOCK INTRO */
-  
-  .intro {
-      margin: 92px 148px 0 24px;
-  }
-  
-  .intro__title {
-      margin: 0 auto;
-      font-size: 54px;
-      font-weight: 900;
-      line-height: 58px;
-      letter-spacing: 0em;
-      text-align: left;
-  }
-  
-  .intro__text {
-      margin: 40px 0 0 0;
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 26px;
-      letter-spacing: 0em;
-      text-align: left;
-  }
-  
-  .intro__list {
-      margin: 33px auto 0 auto;
-      list-style: none;
-      padding: 0;
-      font-size: 12px;
-      font-weight: 400;
-      line-height: 18px;
-      letter-spacing: 0em;
-      text-align: left;
-  }
-  
-  .intro__list-marker {
-      color: #AAAAAA;
-  }
-  
-  .intro__list-item {}
-  /* BLOCK PHOTO-GRID */
-  
-  .photo-grid {
-      margin: 92px 48px 0 48px;
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 16px;
-  }
-  
-  .photo-grid__item {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-  }
-  /* BLOCK PLACES */
-  
-  .places {
-      margin: 12px 148px 0 148px;
-  }
-  
-  .place {
-      margin: 80px 0 0 0;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-areas: 'title links' 'image description';
-      grid-gap: 48px 40px;
-  }
-  
-  .place__title {
-      margin: 0 auto;
-      grid-area: title;
-      font-size: 4.5em;
-      font-weight: 900;
-      line-height: 76px;
-      letter-spacing: 0em;
-      text-align: left;
-      align-self: flex-end;
-  }
-  
-  .place__image {
-      grid-area: image;
-  }
-  
-  .place__website {
-      grid-area: links;
-      align-self: flex-end;
-  }
-  
-  .place__url-heading {
-      color: #AAAAAA;
-      font-size: 12px;
-      font-weight: 400;
-      line-height: 20px;
-      letter-spacing: 2px;
-      text-align: left;
-  }
-  
-  .place__link {
-      display: block;
-      color: #FFFFFF;
-      font-size: 18px;
-      font-weight: 400;
-      line-height: 22px;
-      letter-spacing: 0em;
-      text-align: left;
-  }
-  
-  .place__description {
-      grid-area: description;
-  }
-  
-  .place__paragraph {
-      margin: 26px 0 0 0;
-      font-size: 18px;
-      font-weight: 400;
-      line-height: 29px;
-      letter-spacing: 0em;
-      text-align: left;
-  }
-  
-  .place__paragraph:first-of-type {
-      margin: 0;
-  }
-  /* BLOCK COVER */
-  
-  .cover {
-      margin: 92px 48px 0 48px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-  }
-  
-  .cover__background {
-      width: 100%;
-      height: 100%;
-      opacity: .3;
-  }
-  
-  .cover__heading {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 2;
-  }
-  
-  .cover__title {
-      margin: 0 auto;
-      max-width: 560px;
-      font-size: 72px;
-      font-weight: 900;
-      line-height: 76px;
-      letter-spacing: 0em;
-      text-align: center;
-  }
-  
-  .cover__sub-title {
-      margin: 32px auto 0 auto;
-      width: 360px;
-      font-size: 18px;
-      font-weight: 400;
-      line-height: 22px;
-      letter-spacing: 0em;
-      text-align: center;
-  }
-  /* BLOCK FOOTER */
-  
-  .footer {
-      margin: 92px 48px 0 48px;
-      padding: 0 0 24px 0;
-      display: flex;
-      justify-content: space-between;
-  }
-  
-  .footer__menu {}
-  
-  .footer__link {
-      margin: 0 18px 0 0;
-      color: #FFFFFF;
-      text-decoration: none;
-  }
-  
-  .footer__copyright {}
-  
-  @media screen and (min-width: 320px) {
-      /* BLOCK HEADER */
-      .root {
-          min-width: 320px;
-      }
-      .header {
-          margin: 0 auto;
-          padding: 16px 16px 0 16px;
-      }
-      .header__logo {
-          width: 142px;
-          height: 42px;
-      }
-      .header__lang-link {
-          width: 22px;
-          height: 20px;
-          font-size: 18px;
-          line-height: 20px;
-      }
-      /* BLOCK LEAD */
-      .lead {
-          margin: 48px auto;
-      }
-      .lead__title {
-          width: 288px;
-          height: 88px;
-          font-size: 40px;
-          font-weight: 900;
-          line-height: 44px;
-      }
-      .lead__sub-title {
-          margin: 32px auto 0 auto;
-          width: 288px;
-          height: 40px;
-          font-size: 16px;
-          line-height: 20px;
-      }
-      .lead__image {
-          margin: 40px 0 0 0;
-          min-width: 320px;
-      }
-      .lead__caption {
-          margin: 8px 0 0 16px;
-      }
-      /* BLOCK INTRO */
-      .intro {
-          margin: 64px 0 0 0;
-      }
-      .intro__title {
-          margin: 0 16px 0 16px;
-          font-size: 32px;
-          line-height: 35px;
-      }
-      .intro__text {
-          margin: 40px 16px 0 16px;
-      }
-      .intro__list {
-          margin: 16px 16px 0 16px;
-          list-style: none;
-          padding: 0;
-          font-size: 12px;
-          line-height: 18px;
-      }
-      /* BLOCK PHOTO-GRID */
-      .photo-grid {
-          margin: 64px 16px 0 16px;
-          grid-template-columns: 1fr;
-          gap: 12px;
-      }
-      .photo-grid__item {
-          width: 288px;
-          height: 216px;
-      }
-      /* BLOCK PLACES */
-      .places {
-          margin: 14px 0 0 0;
-      }
-      .place {
-          margin: 50px 0 0 0;
-          grid-template-columns: 1fr;
-          grid-template-areas: 'title' 'links' 'image' 'description';
-          grid-gap: 0;
-      }
-      .place__title {
-          margin: 0 16px 0 16px;
-          font-size: 32px;
-          line-height: 35px;
-      }
-      .place__image {
-          margin: 32px 0 0 0;
-          width: 320px;
-          height: 320px;
-      }
-      .place__url-heading {
-          margin: 12px 16px 0 16px;
-      }
-      .place__link {
-          margin: 12px 16px 0 16px;
-      }
-      .place__description {
-          margin: 32px 0 0 0;
-      }
-      .place__paragraph {
-          margin: 25px 16px 0 16px;
-          font-size: 16px;
-          line-height: 26px;
-      }
-      .place__paragraph:first-of-type {
-          margin: 0px 16px 0 16px;
-      }
-      /* BLOCK COVER */
-      .cover {
-          margin: 66px 0 0 0;
-      }
-      .cover__heading {}
-      .cover__title {
-          margin: 0 0 0 0;
-          max-width: 288px;
-          height: 70px;
-          font-size: 32px;
-          line-height: 35px;
-      }
-      .cover__sub-title
- {
-          margin: 16px 0 0 0;
-          max-width: 288px;
-          height: 48px;
-          font-size: 14px;
-          line-height: 16px;
-      }
-      /* BLOCK FOOTER */
-      .footer {
-          display: flex;
-          flex-direction: column;
-          margin: 0;
-          padding-bottom: 24px;
-      }
-      .footer__menu {
-          margin: 32px 0 0 0;
-          display: flex;
-          flex-direction: column;
-      }
-      .footer__link {
-          margin: 32px 0 0 16px;
-          color: #FFFFFF;
-          text-decoration: none;
-          font-size: 24px;
-          line-height: 24px;
-      }
-      .footer__copyright {
-          margin: 48px 0 0 16px;
-          font-size: 14px;
-          line-height: 14px;
-      }
-  }
-  
-  @media screen and (min-width: 768px) {
-      /* BLOCK HEADER */
-      .root {}
-      .header {
-          margin: 0 auto;
-          padding: 28px 24px 0 24px;
-      }
-      /* BLOCK LEAD */
-      .lead__sub-title {
-          margin: 32px auto 0 auto;
-      }
-      .lead__image {
-          margin: 56px 0 0 0;
-          max-width: 768px;
-      }
-      .lead__caption {
-          margin: 8px 0 0 16px;
-      }
-      /* BLOCK INTRO */
-      .intro {
-          margin: 88px 24px 0 24px;
-      }
-      /* BLOCK PHOTO-GRID */
-      .photo-grid {
-          margin: 88px 24px 0 24px;
-          grid-template-columns: 1fr 1fr;
-          gap: 16px;
-      }
-      .photo-grid__item {
-          width: 352px;
-      }
-      /* BLOCK PLACES */
-      .places {
-          margin: 88px 0 0 24px;
-      }
-      .place {
-          margin: 72px 0 0 0;
-          grid-template-columns: 340px 1fr;
-          grid-template-areas: 'title links' 'image description';
-          gap: 48px 28px;
-      }
-      .place__title {
-          margin: 0 16px 0 16px;
-          font-size: 32px;
-          line-height: 35px;
-      }
-      .place__image {
-          width: 340px;
-          height: 340px;
-          object-position: center;
-          margin: 0px;
-          grid-area: image;
-          width: 320px;
-          height: 320px;
-      }
-      .place__website {
-          grid-area: links;
-          align-self: flex-end;
-      }
-      .place__url-heading {
-          margin: 0 16px 0 16px;
-      }
-      .place__link {
-          margin: 12px 16px 0 16px;
-      }
-      .place__description {
-          grid-area: description;
-      }
-      .place__paragraph {
-          margin: 25px 16px 0 16px;
-          font-size: 16px;
-          line-height: 26px;
-      }
-      .place__paragraph:first-of-type {
-          margin: 0px 16px 0 16px;
-      }
-      /* BLOCK COVER */
-      .cover {
-          margin: 66px 0 0 0;
-          max-width: 100%;
-          display: flex;
-          position: relative;
-      }
-      .cover__heading {
-          margin: 0 16px 0 16px;
-          position: absolute;
-      }
-      .cover__title {
-          margin: 33px 0 0 0;
-          width: 288px;
-          height: 70px;
-          font-size: 32px;
-          line-height: 35px;
-      }
-      .cover__sub-title
- {
-          margin: 16px 0 0 0;
-          width: 288px;
-          height: 48px;
-          font-size: 14px;
-          line-height: 16px;
-      }
-      /* BLOCK FOOTER */
-      .footer {
-          display: flex;
-          flex-direction: column;
-          margin: 0;
-          padding-bottom: 24px;
-      }
-      .footer__menu {
-          margin: 32px 0 0 0;
-          display: flex;
-          flex-direction: column;
-      }
-      .footer__link {
-          margin: 32px 0 0 16px;
-          color: #FFFFFF;
-          text-decoration: none;
-          font-size: 24px;
-          line-height: 24px;
-      }
-      .footer__copyright {
-          margin: 48px 0 0 16px;
-          font-size: 14px;
-          line-height: 14px;
-      }
-  }
+    margin: 0 auto;
+    padding: 0;
+}
+
+.root {
+    min-width: 320px;
+    margin: 0 auto;
+    background-color: #2A2C2F;
+    font-family: "Inter Regular";
+    color: #FFFFFF;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 320px) {
+    .root {
+        min-width: 320px;
+    }
+}
+@media screen and (min-width: 768px) {}
+@media screen and (min-width: 1024px) {}
+@media screen and (min-width: 1280px) {}
