--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,10 @@
 /* обнуляющие стили (NORMALIZE)*/
 @import url(../vendor/normalize.css);
 
-/* обертка главной страницы (ROOT) */
+/* шрифты FONTS */
+@import url(../vendor/fonts/fonts.css);
 
+/* обертка главной страницы (ROOT) */
 @import url(../blocks/root/root.css);
 /* блок HEADER */
 
@@ -25,6 +27,8 @@
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__list-marker/intro__list-marker.css);
+@import url(../blocks/intro/__list-item/intro__list-item.css);
 
 /* блок PHOTO-GRID*/
 @import url(../blocks/photo-grid/photo-grid.css);
