--- a/blocks/footer/__menu/footer__menu.css
+++ b/blocks/footer/__menu/footer__menu.css
@@ -1,5 +1,6 @@
 .footer__menu {}
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .footer__menu {
         margin: 32px 0 0 0;
         display: flex;
@@ -7,10 +8,13 @@
         justify-items: center;
     }
 }
+
 @media screen and (min-width: 768px) {
     .footer__menu {
         flex-direction: row;
     }
 }
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
