--- a/blocks/intro/__list-marker/intro__list-marker.css
+++ b/blocks/intro/__list-marker/intro__list-marker.css
@@ -1,7 +1,11 @@
 .intro__list-marker {
     color: #AAAAAA;
 }
-@media screen and (max-width: 320px) {}
+
+@media screen and (min-width: 320px) {}
+
 @media screen and (min-width: 768px) {}
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
