--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,9 +1,37 @@
 .cover__background {
-    width: 100%;
-    height: 100%;
+    width: 1184px;
+    height: 740px;
     opacity: .3;
 }
-@media screen and (max-width: 320px) {}
-@media screen and (min-width: 768px) {}
-@media screen and (min-width: 1024px) {}
-@media screen and (min-width: 1280px) {}
+
+.cover__background img {
+    max-width: 100%;
+}
+
+@media screen and (min-width: 320px) {
+    .cover__background {
+        width: 100%;
+        height: 200px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .cover__background {
+        width: 100%;
+        height: 480px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .cover__background {
+        width: 100%;
+        height: 640px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .cover__background {
+        width: 1184px;
+        height: 740px;
+    }
+}
