--- a/blocks/cover/__headings/cover__headings.css
+++ b/blocks/cover/__headings/cover__headings.css
@@ -1,16 +1,24 @@
 .cover__headings {
+    width: 560px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
 }
-@media screen and (max-width: 320px) {}
-@media screen and (min-width: 768px) {
+
+@media screen and (min-width: 320px) {
     .cover__headings {
-        margin: 0 16px 0 16px;
-        position: absolute;
+        width: 288px;
     }
 }
+
+@media screen and (min-width: 768px) {
+    .cover__headings {
+        width: 560px;
+    }
+}
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
