--- a/blocks/cover/__sub-title/cover__sub-title.css
+++ b/blocks/cover/__sub-title/cover__sub-title.css
@@ -1,29 +1,31 @@
 .cover__sub-title {
-    margin: 32px auto 0 auto;
-    width: 360px;
+    margin: 32px 0 0 0;
+    width: 100%;
     font-size: 18px;
     font-weight: 400;
     line-height: 22px;
     letter-spacing: 0em;
     text-align: center;
 }
-@media screen and (max-width: 320px) {
-    .cover__sub-title {
-        margin: 16px 0 0 0;
-        max-width: 288px;
-        height: 48px;
-        font-size: 14px;
-        line-height: 16px;
-    }
-}
-@media screen and (min-width: 768px) {
+
+@media screen and (min-width: 320px) {
     .cover__sub-title {
         margin: 16px 0 0 0;
         width: 288px;
-        height: 48px;
         font-size: 14px;
         line-height: 16px;
     }
 }
+
+@media screen and (min-width: 768px) {
+    .cover__sub-title {
+        margin: 32px auto 0 auto;
+        width: 360px;
+        font-size: 18px;
+        line-height: 22px;
+    }
+}
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
