--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,29 +1,27 @@
 .cover__title {
     margin: 0 auto;
-    max-width: 560px;
-    font-size: 72px;
+    width: 100%;
+    font-size: 4.5rem;
     font-weight: 900;
     line-height: 76px;
     letter-spacing: 0em;
     text-align: center;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .cover__title {
-        margin: 0 0 0 0;
-        max-width: 288px;
-        height: 70px;
-        font-size: 32px;
+        font-size: 2rem;
         line-height: 35px;
     }
 }
+
 @media screen and (min-width: 768px) {
     .cover__title {
-        margin: 33px 0 0 0;
-        width: 288px;
-        height: 70px;
-        font-size: 32px;
-        line-height: 35px;
+        font-size: 4.5rem;
+        line-height: 76px;
     }
 }
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
