--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,11 +1,15 @@
 .footer__copyright {}
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .footer__copyright {
         margin: 48px 0 0 16px;
         font-size: 14px;
         line-height: 14px;
     }
 }
+
 @media screen and (min-width: 768px) {}
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
