--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,24 +2,26 @@
     margin: 0 18px 0 0;
     color: #FFFFFF;
     text-decoration: none;
+    font-size: 16px;
+    line-height: 18px;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .footer__link {
         margin: 32px 0 0 16px;
-        color: #FFFFFF;
-        text-decoration: none;
         font-size: 24px;
         line-height: 24px;
     }
 }
+
 @media screen and (min-width: 768px) {
     .footer__link {
-        margin: 32px 0 0 16px;
-        color: #FFFFFF;
-        text-decoration: none;
-        font-size: 24px;
-        line-height: 24px;
+        margin: 0 18px 0 0;
+        font-size: 16px;
+        line-height: 18px;
     }
 }
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
