--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,12 +4,27 @@
     display: flex;
     justify-content: space-between;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .footer {
         margin: 0;
-        padding-bottom: 24px;
+        flex-direction: column;
     }
 }
-@media screen and (min-width: 768px) {}
-@media screen and (min-width: 1024px) {}
+
+@media screen and (min-width: 768px) {
+    .footer {
+        margin: 88px 24px 0 24px;
+        padding: 0 0 24px 0;
+        flex-direction: row;
+        align-items: flex-end;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .footer {
+        margin: 92px 48px 0 48px;
+    }
+}
+
 @media screen and (min-width: 1280px) {}
