--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,22 +1,32 @@
 .header__lang-link {
-    width: 30px;
-    height: 28px;
+    margin: 0 18px 0 0;
     text-decoration: none;
     color: #FFFFFF;
-    font-size: 1.5em;
-    font-weight: 400;
+    font-size: 1.5rem;
     line-height: 28px;
+    font-weight: 400;
     letter-spacing: 0em;
     text-align: right;
 }
-@media screen and (max-width: 320px) {
+
+.header__lang-link:last-child {
+    margin: 0;
+}
+
+@media screen and (min-width: 320px) {
     .header__lang-link {
-        width: 22px;
-        height: 20px;
         font-size: 18px;
         line-height: 20px;
     }
 }
-@media screen and (min-width: 768px) {}
+
+@media screen and (min-width: 768px) {
+    .header__lang-link {
+        font-size: 1.5rem;
+        line-height: 28px;
+    }
+}
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
