--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,5 +1,9 @@
 .header__lang-links {}
-@media screen and (max-width: 320px) {}
+
+@media screen and (min-width: 320px) {}
+
 @media screen and (min-width: 768px) {}
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
