--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,15 +1,32 @@
-@media screen and (max-width: 320px) {
-    .header__logo {
-        width: 142px;
-        height: 42px;
-    }
-}
-@media screen and (min-width: 768px) {
-    
-}
-@media screen and (min-width: 1024px) {
-
-}
-@media screen and (min-width: 1280px) {
-
-}
+ .header__logo {
+     width: 176px;
+     height: 52px;
+ }
+ 
+ .header__logo img {
+     max-width: 100%;
+ }
+ 
+ @media screen and (min-width: 320px) {
+     .header__logo {
+         width: 142px;
+         height: 42px;
+     }
+     .header__logo img {
+         max-width: 100%;
+     }
+ }
+ 
+ @media screen and (min-width: 768px) {
+     .header__logo {
+         width: 176px;
+         height: 52px;
+     }
+     .header__logo img {
+         max-width: 100%;
+     }
+ }
+ 
+ @media screen and (min-width: 1024px) {}
+ 
+ @media screen and (min-width: 1280px) {}
