--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,19 +3,25 @@
     padding: 28px 48px 0 48px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .header {
-        margin: 0 auto;
         padding: 16px 16px 0 16px;
     }
 }
+
 @media screen and (min-width: 768px) {
     .header {
-        margin: 0 auto;
         padding: 28px 24px 0 24px;
     }
 }
-@media screen and (min-width: 1024px) {}
+
+@media screen and (min-width: 1024px) {
+    .header {
+        padding: 28px 48px 0 48px;
+    }
+}
+
 @media screen and (min-width: 1280px) {}
