--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -8,7 +8,8 @@
     letter-spacing: 0em;
     text-align: left;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .intro__list {
         margin: 16px 16px 0 16px;
         list-style: none;
@@ -17,6 +18,9 @@
         line-height: 18px;
     }
 }
+
 @media screen and (min-width: 768px) {}
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
