--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -6,11 +6,15 @@
     letter-spacing: 0em;
     text-align: left;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .intro__text {
         margin: 40px 16px 0 16px;
     }
 }
+
 @media screen and (min-width: 768px) {}
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
