--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,13 +6,17 @@
     letter-spacing: 0em;
     text-align: left;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .intro__title {
         margin: 0 16px 0 16px;
         font-size: 32px;
         line-height: 35px;
     }
 }
+
 @media screen and (min-width: 768px) {}
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
