--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,15 +1,32 @@
 .intro {
-    margin: 92px 148px 0 24px;
+    margin: 92px 0 0 148px;
+    width: 690px;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .intro {
         margin: 64px 0 0 0;
+        width: 288px;
     }
 }
+
 @media screen and (min-width: 768px) {
     .intro {
         margin: 88px 24px 0 24px;
+        width: 720px;
     }
 }
-@media screen and (min-width: 1024px) {}
-@media screen and (min-width: 1280px) {}
+
+@media screen and (min-width: 1024px) {
+    .intro {
+        margin: 92px 0 0 48px;
+        width: 690px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .intro {
+        margin: 92px 0 0 148px;
+        width: 690px;
+    }
+}
