--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,15 +6,23 @@
     letter-spacing: 1.5px;
     text-align: left;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .lead__caption {
         margin: 8px 0 0 16px;
     }
 }
+
 @media screen and (min-width: 768px) {
     .lead__caption {
         margin: 8px 0 0 16px;
     }
 }
-@media screen and (min-width: 1024px) {}
+
+@media screen and (min-width: 1024px) {
+    .lead__caption {
+        margin: 8px 0 0 0;
+    }
+}
+
 @media screen and (min-width: 1280px) {}
