--- a/blocks/lead/__image-map/lead__image-map.css
+++ b/blocks/lead/__image-map/lead__image-map.css
@@ -1,12 +1,15 @@
 .lead__image-map {
-    width: 94%;
-    object-fit: cover;
+    max-width: 100%;
     position: absolute;
     top: 15%;
     left: 3%;
     z-index: 2;
 }
-@media screen and (max-width: 320px) {}
+
+@media screen and (min-width: 320px) {}
+
 @media screen and (min-width: 768px) {}
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
