--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,19 +1,33 @@
 .lead__image {
     margin: 64px 0 0 0;
-    max-width: 984px;
+    width: 984px;
     position: relative;
+    justify-self: left;
 }
-@media screen and (max-width: 320px) {
+
+.lead__image img {
+    max-width: 100%;
+}
+
+@media screen and (min-width: 320px) {
     .lead__image {
         margin: 40px 0 0 0;
-        min-width: 320px;
+        width: 100%;
     }
 }
+
 @media screen and (min-width: 768px) {
     .lead__image {
         margin: 56px 0 0 0;
-        max-width: 768px;
+        width: 100%;
     }
 }
-@media screen and (min-width: 1024px) {}
+
+@media screen and (min-width: 1024px) {
+    .lead__image {
+        margin: 56px 0 0 0;
+        width: 928px;
+    }
+}
+
 @media screen and (min-width: 1280px) {}
