--- a/blocks/lead/__sub-title/lead__sub-title.css
+++ b/blocks/lead/__sub-title/lead__sub-title.css
@@ -1,25 +1,31 @@
 .lead__sub-title {
     margin: 32px 0 0 0;
-    max-width: 640px;
+    width: 640px;
     font-size: 30px;
     font-weight: 400;
     line-height: 36px;
     letter-spacing: 0em;
     text-align: center;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .lead__sub-title {
-        margin: 32px auto 0 auto;
+        margin: 16px 0 0 0;
         width: 288px;
-        height: 40px;
-        font-size: 16px;
+        font-size: 1rem;
         line-height: 20px;
     }
 }
+
 @media screen and (min-width: 768px) {
     .lead__sub-title {
-        margin: 32px auto 0 auto;
+        margin: 32px 0 0 0;
+        width: 640px;
+        font-size: 30px;
+        line-height: 36px;
     }
 }
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
