--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,21 +1,29 @@
 .lead__title {
     margin: 0 auto;
-    max-width: 720px;
-    font-size: 6em;
+    width: 720px;
+    font-size: 6rem;
     font-weight: 900;
     line-height: 100px;
     letter-spacing: 0em;
     text-align: center;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .lead__title {
         width: 288px;
-        height: 88px;
-        font-size: 40px;
-        font-weight: 900;
+        font-size: 2.5rem;
         line-height: 44px;
     }
 }
-@media screen and (min-width: 768px) {}
+
+@media screen and (min-width: 768px) {
+    .lead__title {
+        width: 720px;
+        font-size: 6rem;
+        line-height: 100px;
+    }
+}
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
