--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,14 +1,30 @@
 .lead {
-    margin: 56px 0 0 0;
+    margin: 56px 0 0 148px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .lead {
-        margin: 48px auto;
+        margin: 48px 0 0 0;
     }
 }
-@media screen and (min-width: 768px) {}
-@media screen and (min-width: 1024px) {}
-@media screen and (min-width: 1280px) {}
+
+@media screen and (min-width: 768px) {
+    .lead {
+        margin: 48px 0 0 0;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .lead {
+        margin: 48px 0 0 48px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .lead {
+        margin: 56px 0 0 0;
+    }
+}
