--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,17 +1,33 @@
 .photo-grid__item {
-    width: 100%;
-    height: 100%;
+    margin: 0 auto;
+    object-position: center;
 }
-@media screen and (max-width: 320px) {
+
+.photo-grid__item img {
+    max-width: 100%;
+}
+
+@media screen and (min-width: 320px) {
     .photo-grid__item {
         width: 288px;
         height: 216px;
     }
 }
+
 @media screen and (min-width: 768px) {
     .photo-grid__item {
         width: 352px;
     }
 }
-@media screen and (min-width: 1024px) {}
-@media screen and (min-width: 1280px) {}
+
+@media screen and (min-width: 1024px) {
+    .photo-grid__item {
+        width: 300px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .photo-grid__item {
+        width: 284px;
+    }
+}
