--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,28 +1,37 @@
 .photo-grid {
     margin: 92px 48px 0 48px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 16px;
+    grid-template-columns: repeat(4, 284px);
+    justify-content: center;
+    gap: 16px 16px;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .photo-grid {
         margin: 64px 16px 0 16px;
-        grid-template-columns: 1fr;
+        grid-template-columns: 288px;
         gap: 12px;
     }
 }
+
 @media screen and (min-width: 768px) {
     .photo-grid {
         margin: 88px 24px 0 24px;
-        grid-template-columns: 1fr 1fr;
-        gap: 16px;
+        grid-template-columns: repeat(2, 352px);
+        gap: 16px 16px;
     }
 }
-@media screen and (min-width: 1024px) {}
+
+@media screen and (min-width: 1024px) {
+    .photo-grid {
+        margin: 88px 48px 0 48px;
+        grid-template-columns: repeat(3, 300px);
+    }
+}
+
 @media screen and (min-width: 1280px) {
     .photo-grid {
-        margin: 88px 24px 0 24px;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 16px;
+        margin: 92px 48px 0 48px;
+        grid-template-columns: repeat(4, 284px);
     }
 }
