--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -1,11 +1,20 @@
 .place__description {
+    margin: 0;
     grid-area: description;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .place__description {
         margin: 32px 0 0 0;
     }
 }
-@media screen and (min-width: 768px) {}
+
+@media screen and (min-width: 768px) {
+    .place__description {
+        margin: 0;
+    }
+}
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
