--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -7,11 +7,15 @@
     letter-spacing: 0em;
     text-align: left;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .place__link {
         margin: 12px 16px 0 16px;
     }
 }
+
 @media screen and (min-width: 768px) {}
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
