--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -10,7 +10,8 @@
 .place__paragraph:first-of-type {
     margin: 0;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .place__paragraph {
         margin: 25px 16px 0 16px;
         font-size: 16px;
@@ -20,6 +21,7 @@
         margin: 0px 16px 0 16px;
     }
 }
+
 @media screen and (min-width: 768px) {
     .place__paragraph {
         margin: 25px 16px 0 16px;
@@ -30,5 +32,7 @@
         margin: 0px 16px 0 16px;
     }
 }
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
