--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -8,13 +8,15 @@
     text-align: left;
     align-self: flex-end;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .place__title {
         margin: 0 16px 0 16px;
         font-size: 32px;
         line-height: 35px;
     }
 }
+
 @media screen and (min-width: 768px) {
     .place__title {
         margin: 0 16px 0 16px;
@@ -22,5 +24,7 @@
         line-height: 35px;
     }
 }
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
