--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,4 +1,5 @@
 .place__url-heading {
+    margin: 0;
     color: #AAAAAA;
     font-size: 12px;
     font-weight: 400;
@@ -6,15 +7,19 @@
     letter-spacing: 2px;
     text-align: left;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .place__url-heading {
-        margin: 12px 16px 0 16px;
+        margin: 0 0 0 16px;
     }
 }
+
 @media screen and (min-width: 768px) {
     .place__url-heading {
-        margin: 0 16px 0 16px;
+        margin: 0;
     }
 }
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
