--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,8 +1,13 @@
 .place__website {
+    margin: 12px 0 0 0;
     grid-area: links;
     align-self: flex-end;
 }
-@media screen and (max-width: 320px) {}
+
+@media screen and (min-width: 320px) {}
+
 @media screen and (min-width: 768px) {}
+
 @media screen and (min-width: 1024px) {}
+
 @media screen and (min-width: 1280px) {}
