--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,11 +1,14 @@
 .place {
     margin: 80px 0 0 0;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: max-content 1fr;
     grid-template-areas: 'title links' 'image description';
     grid-gap: 48px 40px;
+    justify-items: start;
+    align-items: start;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .place {
         margin: 50px 0 0 0;
         grid-template-columns: 1fr;
@@ -13,13 +16,30 @@
         grid-gap: 0;
     }
 }
+
 @media screen and (min-width: 768px) {
     .place {
-        margin: 72px 0 0 0;
+        margin: 73px 0 0 0;
         grid-template-columns: 340px 1fr;
         grid-template-areas: 'title links' 'image description';
         gap: 48px 28px;
     }
 }
-@media screen and (min-width: 1024px) {}
-@media screen and (min-width: 1280px) {}
+
+@media screen and (min-width: 1024px) {
+    .place {
+        margin: 80px 0 0 0;
+        grid-template-columns: 440px 1fr;
+        grid-template-areas: 'title links' 'image description';
+        gap: 48px 28px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .place {
+        margin: 80px 0 0 0;
+        grid-template-columns: max-content 484px;
+        grid-template-areas: 'title links' 'image description';
+        grid-gap: 48px 40px;
+    }
+}
