--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,15 +1,27 @@
 .places {
     margin: 12px 148px 0 148px;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (min-width: 320px) {
     .places {
         margin: 14px 0 0 0;
     }
 }
+
 @media screen and (min-width: 768px) {
     .places {
         margin: 88px 0 0 24px;
     }
 }
-@media screen and (min-width: 1024px) {}
-@media screen and (min-width: 1280px) {}
+
+@media screen and (min-width: 1024px) {
+    .places {
+        margin: 12px 48px 0 48px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .places {
+        margin: 12px 0 0 148px;
+    }
+}
