--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,25 +1,29 @@
   /*! Оптимизировать шрифты(сглаживание) */
   /* WRAPPER PAGE */
-
+  
   body {
-    margin: 0 auto;
-    padding: 0;
-}
-
-.root {
-    min-width: 320px;
-    margin: 0 auto;
-    background-color: #2A2C2F;
-    font-family: "Inter Regular";
-    color: #FFFFFF;
-    overflow: hidden;
-}
-
-@media screen and (max-width: 320px) {
-    .root {
-        min-width: 320px;
-    }
-}
-@media screen and (min-width: 768px) {}
-@media screen and (min-width: 1024px) {}
-@media screen and (min-width: 1280px) {}
+      margin: 0 auto;
+      padding: 0;
+      min-width: 320px;
+  }
+  
+  .root {
+      min-width: 320px;
+      margin: 0 auto;
+      background-color: #2A2C2F;
+      font-family: "Inter Regular";
+      color: #FFFFFF;
+      overflow: hidden;
+  }
+  
+  @media screen and (min-width: 320px) {
+      .root {
+          min-width: 320px;
+      }
+  }
+  
+  @media screen and (min-width: 768px) {}
+  
+  @media screen and (min-width: 1024px) {}
+  
+  @media screen and (min-width: 1280px) {}
