--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,37 +1,15 @@
 .cover__background {
-    width: 1184px;
-    height: 740px;
+    margin: 0 auto;
     opacity: .3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    z-index: 1;
 }
 
 .cover__background img {
     max-width: 100%;
-}
-
-@media screen and (min-width: 320px) {
-    .cover__background {
-        width: 100%;
-        height: 200px;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .cover__background {
-        width: 100%;
-        height: 480px;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .cover__background {
-        width: 100%;
-        height: 640px;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .cover__background {
-        width: 1184px;
-        height: 740px;
-    }
 }
