--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,16 @@
 .cover {
     margin: 92px 48px 0 48px;
-    position: relative;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr;
+    grid-template-rows: 1fr;
+}
+
+.cover > *:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
 }
 
 @media screen and (min-width: 320px) {
@@ -8,10 +18,6 @@
         margin: 66px 0 0 0;
     }
 }
-
-@media screen and (min-width: 768px) {}
-
-@media screen and (min-width: 1024px) {}
 
 @media screen and (min-width: 1280px) {
     .cover {
