--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,4 +1,10 @@
-.footer__copyright {}
+.footer__copyright {
+    margin: 0;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: right;
+}
 
 @media screen and (min-width: 320px) {
     .footer__copyright {
@@ -8,8 +14,9 @@
     }
 }
 
-@media screen and (min-width: 768px) {}
-
-@media screen and (min-width: 1024px) {}
-
-@media screen and (min-width: 1280px) {}
+@media screen and (min-width: 768px) {
+    .footer__copyright {
+        line-height: 16px;
+        margin: 0;
+    }
+}
