--- a/blocks/footer/__menu/footer__menu.css
+++ b/blocks/footer/__menu/footer__menu.css
@@ -1,20 +1,29 @@
-.footer__menu {}
+.footer__menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 32px 0 0 0;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    justify-items: center;
+}
 
 @media screen and (min-width: 320px) {
     .footer__menu {
-        margin: 32px 0 0 0;
-        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
-        justify-items: center;
     }
 }
 
 @media screen and (min-width: 768px) {
     .footer__menu {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
         flex-direction: row;
     }
 }
-
-@media screen and (min-width: 1024px) {}
-
-@media screen and (min-width: 1280px) {}
