--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,13 +1,20 @@
 .footer {
     margin: 92px 48px 0 48px;
     padding: 0 0 24px 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
 }
 
 @media screen and (min-width: 320px) {
     .footer {
         margin: 0;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
     }
 }
@@ -16,7 +23,12 @@
     .footer {
         margin: 88px 24px 0 24px;
         padding: 0 0 24px 0;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
         flex-direction: row;
+        -webkit-box-align: end;
+        -ms-flex-align: end;
         align-items: flex-end;
     }
 }
@@ -26,5 +38,3 @@
         margin: 92px 48px 0 48px;
     }
 }
-
-@media screen and (min-width: 1280px) {}
