--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,15 @@
 .header {
     margin: 0 auto;
     padding: 28px 48px 0 48px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
 }
 
 @media screen and (min-width: 320px) {
@@ -23,5 +29,3 @@
         padding: 28px 48px 0 48px;
     }
 }
-
-@media screen and (min-width: 1280px) {}
