--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,5 +1,5 @@
 .intro__list {
-    margin: 33px auto 0 auto;
+    margin: 16px 0 0 0;
     list-style: none;
     padding: 0;
     font-size: 12px;
@@ -8,19 +8,3 @@
     letter-spacing: 0em;
     text-align: left;
 }
-
-@media screen and (min-width: 320px) {
-    .intro__list {
-        margin: 16px 16px 0 16px;
-        list-style: none;
-        padding: 0;
-        font-size: 12px;
-        line-height: 18px;
-    }
-}
-
-@media screen and (min-width: 768px) {}
-
-@media screen and (min-width: 1024px) {}
-
-@media screen and (min-width: 1280px) {}
