--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,19 +2,7 @@
     margin: 40px 0 0 0;
     font-size: 16px;
     font-weight: 400;
-    line-height: 26px;
+    line-height: 163%;
     letter-spacing: 0em;
     text-align: left;
 }
-
-@media screen and (min-width: 320px) {
-    .intro__text {
-        margin: 40px 16px 0 16px;
-    }
-}
-
-@media screen and (min-width: 768px) {}
-
-@media screen and (min-width: 1024px) {}
-
-@media screen and (min-width: 1280px) {}
