--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,5 +1,5 @@
 .intro__title {
-    margin: 0 auto;
+    margin: 0;
     font-size: 54px;
     font-weight: 900;
     line-height: 58px;
@@ -9,14 +9,14 @@
 
 @media screen and (min-width: 320px) {
     .intro__title {
-        margin: 0 16px 0 16px;
         font-size: 32px;
         line-height: 35px;
     }
 }
 
-@media screen and (min-width: 768px) {}
-
-@media screen and (min-width: 1024px) {}
-
-@media screen and (min-width: 1280px) {}
+@media screen and (min-width: 768px) {
+    .intro__title {
+        font-size: 54px;
+        line-height: 58px;
+    }
+}
