--- a/blocks/lead/__image-background/lead__image-background.css
+++ b/blocks/lead/__image-background/lead__image-background.css
@@ -1,11 +1,4 @@
 .lead__image-background {
     max-width: 100%;
+    margin: 0 auto;
 }
-
-@media screen and (min-width: 320px) {}
-
-@media screen and (min-width: 768px) {}
-
-@media screen and (min-width: 1024px) {}
-
-@media screen and (min-width: 1280px) {}
