--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,33 +1,11 @@
 .lead__image {
-    margin: 64px 0 0 0;
-    width: 984px;
+    margin: 64px auto 0 auto;
+    max-width: 100%;
     position: relative;
+    -ms-grid-column-align: left;
     justify-self: left;
 }
 
 .lead__image img {
     max-width: 100%;
 }
-
-@media screen and (min-width: 320px) {
-    .lead__image {
-        margin: 40px 0 0 0;
-        width: 100%;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .lead__image {
-        margin: 56px 0 0 0;
-        width: 100%;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .lead__image {
-        margin: 56px 0 0 0;
-        width: 928px;
-    }
-}
-
-@media screen and (min-width: 1280px) {}
