--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,30 +1,13 @@
 .lead {
-    margin: 56px 0 0 148px;
+    margin: 56px auto 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
-}
-
-@media screen and (min-width: 320px) {
-    .lead {
-        margin: 48px 0 0 0;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .lead {
-        margin: 48px 0 0 0;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .lead {
-        margin: 48px 0 0 48px;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .lead {
-        margin: 56px 0 0 0;
-    }
 }
