--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,33 +1,11 @@
 .photo-grid__item {
     margin: 0 auto;
-    object-position: center;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center;
+       object-position: center;
 }
 
 .photo-grid__item img {
     max-width: 100%;
-}
-
-@media screen and (min-width: 320px) {
-    .photo-grid__item {
-        width: 288px;
-        height: 216px;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .photo-grid__item {
-        width: 352px;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .photo-grid__item {
-        width: 300px;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .photo-grid__item {
-        width: 284px;
-    }
 }
