--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,37 +1,25 @@
 .photo-grid {
-    margin: 92px 48px 0 48px;
+    margin: 92px auto 0 auto;
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: repeat(4, 284px);
-    justify-content: center;
-    gap: 16px 16px;
+    grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
+    gap: 16px;
 }
 
 @media screen and (min-width: 320px) {
     .photo-grid {
-        margin: 64px 16px 0 16px;
-        grid-template-columns: 288px;
-        gap: 12px;
+        margin: 64px auto 0 auto;
     }
 }
 
 @media screen and (min-width: 768px) {
     .photo-grid {
-        margin: 88px 24px 0 24px;
-        grid-template-columns: repeat(2, 352px);
-        gap: 16px 16px;
+        margin: 88px auto 0 auto;
     }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (width: 1280px) {
     .photo-grid {
-        margin: 88px 48px 0 48px;
-        grid-template-columns: repeat(3, 300px);
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .photo-grid {
-        margin: 92px 48px 0 48px;
-        grid-template-columns: repeat(4, 284px);
+        margin: 92px auto 0 auto;
     }
 }
