--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,7 +1,7 @@
 .place__image {
     grid-area: image;
-    margin: 0px;
-    width: 100%;
+    margin: 0 auto;
+    object-fit: cover;
 }
 
 .place__image img {
@@ -10,16 +10,12 @@
 
 @media screen and (min-width: 320px) {
     .place__image {
-        margin: 32px 0 0 0;
+        margin: 32px auto 0 auto;
     }
 }
 
 @media screen and (min-width: 768px) {
     .place__image {
-        margin: 0px;
+        margin: 0 auto;
     }
 }
-
-@media screen and (min-width: 1024px) {}
-
-@media screen and (min-width: 1280px) {}
