--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,4 +1,5 @@
 .place__link {
+    margin: 12px 0 0 0;
     display: block;
     color: #FFFFFF;
     font-size: 18px;
@@ -7,15 +8,3 @@
     letter-spacing: 0em;
     text-align: left;
 }
-
-@media screen and (min-width: 320px) {
-    .place__link {
-        margin: 12px 16px 0 16px;
-    }
-}
-
-@media screen and (min-width: 768px) {}
-
-@media screen and (min-width: 1024px) {}
-
-@media screen and (min-width: 1280px) {}
