--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,7 +2,7 @@
     margin: 26px 0 0 0;
     font-size: 18px;
     font-weight: 400;
-    line-height: 29px;
+    line-height: 163%;
     letter-spacing: 0em;
     text-align: left;
 }
@@ -13,26 +13,14 @@
 
 @media screen and (min-width: 320px) {
     .place__paragraph {
-        margin: 25px 16px 0 16px;
         font-size: 16px;
         line-height: 26px;
-    }
-    .place__paragraph:first-of-type {
-        margin: 0px 16px 0 16px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .place__paragraph {
-        margin: 25px 16px 0 16px;
-        font-size: 16px;
-        line-height: 26px;
-    }
-    .place__paragraph:first-of-type {
-        margin: 0px 16px 0 16px;
+        font-size: 18px;
+        line-height: 163%;
     }
 }
-
-@media screen and (min-width: 1024px) {}
-
-@media screen and (min-width: 1280px) {}
