--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,7 +1,7 @@
 .place__title {
-    margin: 0 auto;
+    margin: 0;
     grid-area: title;
-    font-size: 4.5em;
+    font-size: 4.5rem;
     font-weight: 900;
     line-height: 76px;
     letter-spacing: 0em;
@@ -11,20 +11,14 @@
 
 @media screen and (min-width: 320px) {
     .place__title {
-        margin: 0 16px 0 16px;
-        font-size: 32px;
+        margin: 0 0 0 16px;
+        font-size: 2rem;
         line-height: 35px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .place__title {
-        margin: 0 16px 0 16px;
-        font-size: 32px;
-        line-height: 35px;
+        margin: 0;
     }
 }
-
-@media screen and (min-width: 1024px) {}
-
-@media screen and (min-width: 1280px) {}
