--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,27 +1,35 @@
 .place {
     margin: 80px 0 0 0;
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: max-content 1fr;
-    grid-template-areas: 'title links' 'image description';
+    grid-template-columns: repeat(auto-fit, minmax(340px, -webkit-max-content));
+    grid-template-columns: repeat(auto-fit, minmax(340px, max-content));
+    -ms-grid-rows: auto 48px auto;
+        grid-template-areas: 'title links' 'image description';
     grid-gap: 48px 40px;
     justify-items: start;
-    align-items: start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
 }
 
 @media screen and (min-width: 320px) {
     .place {
         margin: 50px 0 0 0;
+        -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-        grid-template-areas: 'title' 'links' 'image' 'description';
-        grid-gap: 0;
+        -ms-grid-rows: auto 48px auto 48px auto 48px auto;
+            grid-template-areas: 'title' 'links' 'image' 'description';
     }
 }
 
 @media screen and (min-width: 768px) {
     .place {
         margin: 73px 0 0 0;
+        -ms-grid-columns: 340px 28px 1fr;
         grid-template-columns: 340px 1fr;
-        grid-template-areas: 'title links' 'image description';
+        -ms-grid-rows: auto 48px auto;
+            grid-template-areas: 'title links' 'image description';
         gap: 48px 28px;
     }
 }
@@ -29,17 +37,16 @@
 @media screen and (min-width: 1024px) {
     .place {
         margin: 80px 0 0 0;
+        -ms-grid-columns: 440px 40px 1fr;
         grid-template-columns: 440px 1fr;
-        grid-template-areas: 'title links' 'image description';
-        gap: 48px 28px;
     }
 }
 
 @media screen and (min-width: 1280px) {
     .place {
-        margin: 80px 0 0 0;
+        -ms-grid-columns: -webkit-max-content 40px 484px;
+        -ms-grid-columns: max-content 40px 484px;
+        grid-template-columns: -webkit-max-content 484px;
         grid-template-columns: max-content 484px;
-        grid-template-areas: 'title links' 'image description';
-        grid-gap: 48px 40px;
     }
 }
