--- a/blocks/link/link.css
+++ b/blocks/link/link.css
@@ -1,4 +1,22 @@
 .link {
     text-decoration: none;
     color: #fff;
+    border-bottom: 1px solid #fff;
+    -webkit-transition-duration: .8s;
+    -o-transition-duration: .8s;
+    transition-duration: .8s;
+}
+
+.link:active {
+    font-weight: 900;
+}
+
+.link:visited {
+    color: blue;
+    border-bottom: 1px solid blue;
+}
+
+.link:hover {
+    color: red;
+    border-bottom: 1px solid red;
 }
