--- a/blocks/cover/__headings/cover__headings.css
+++ b/blocks/cover/__headings/cover__headings.css
@@ -1,7 +1,13 @@
 .cover__headings {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
     grid-row: 1/2;
-    z-index: 2;
+    z-index: 3;
+    -ms-grid-row-align: center;
     align-self: center;
+    -ms-grid-column-align: center;
     justify-self: center;
 }
