--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -8,6 +8,15 @@
     line-height: 76px;
     letter-spacing: 0em;
     text-align: center;
+    border-bottom: none;
+}
+
+.cover__title:hover {
+    border-bottom: none;
+}
+
+.cover__title:visited {
+    color: #fff;
 }
 
 @media screen and (min-width: 320px) {
