--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,6 +5,18 @@
     font-size: 14px;
     line-height: 16px;
     text-align: right;
+    text-decoration: none;
+    -webkit-transition-duration: 1s;
+    -o-transition-duration: 1s;
+    transition-duration: 1s;
+}
+
+.footer__copyright:hover {
+    text-decoration: underline;
+}
+
+.footer__copyright:visited {
+    color: grey;
 }
 
 @media screen and (min-width: 320px) {
