--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,6 +2,7 @@
     margin: 0 18px 0 0;
     font-size: 16px;
     line-height: 18px;
+    border-bottom: none;
 }
 
 @media screen and (min-width: 320px) {
