--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,14 +1,25 @@
 .header__lang-link {
     margin: 0 18px 0 0;
+    padding: 0;
+    color: #fff;
     font-size: 1.5rem;
     line-height: 28px;
     font-weight: 400;
     letter-spacing: 0em;
     text-align: right;
+    text-decoration: none;
 }
 
 .header__lang-link:last-child {
     margin: 0;
+}
+
+.header__lank-link:active {
+    text-decoration: underline;
+}
+
+.header__lang-link:hover {
+    text-decoration: underline;
 }
 
 @media screen and (min-width: 320px) {
