--- a/blocks/lead/__sub-title/lead__sub-title.css
+++ b/blocks/lead/__sub-title/lead__sub-title.css
@@ -17,6 +17,22 @@
     }
 }
 
+@media screen and (min-width: 460px) {
+    .lead__sub-title {
+        width: 350px;
+        font-size: 20px;
+        line-height: 26px;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .lead__sub-title {
+        width: 500px;
+        font-size: 24px;
+        line-height: 30px;
+    }
+}
+
 @media screen and (min-width: 768px) {
     .lead__sub-title {
         margin: 32px 0 0 0;
