--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -11,12 +11,12 @@
 
 @media screen and (min-width: 320px) {
     .place__link {
-        padding-left: 16px;
+        margin-left: 16px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .place__link {
-        padding-left: 0;
+        margin-left: 0;
     }
 }
