Finish-work-ver-1

--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -9,10 +9,13 @@
     letter-spacing: 0em;
     text-align: center;
     border-bottom: none;
+    
 }
 
 .cover__title:hover {
     border-bottom: none;
+    text-shadow: 5px 5px 10px black;
+    color: #fff;
 }
 
 .cover__title:visited {
