--- a/blocks/cover/__sub-title/cover__sub-title.css
+++ b/blocks/cover/__sub-title/cover__sub-title.css
@@ -1,6 +1,6 @@
 .cover__sub-title {
     margin: 32px 0 0 0;
-    width: 100%;
+    width: 360px;
     font-size: 18px;
     font-weight: 400;
     line-height: 22px;
@@ -10,7 +10,7 @@
 
 @media screen and (min-width: 320px) {
     .cover__sub-title {
-        margin: 16px 0 0 0;
+        margin: 16px auto 0 auto;
         width: 288px;
         font-size: 14px;
         line-height: 16px;
