--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,10 +1,9 @@
 .cover__title {
-    font-family: "Inter Black";
+    font-weight: 900;
     margin: 0 auto;
     display: block;
-    width: 100%;
+    width: 560px;
     font-size: 4.5rem;
-    font-weight: 900;
     line-height: 76px;
     letter-spacing: 0em;
     text-align: center;
@@ -24,6 +23,7 @@
 
 @media screen and (min-width: 320px) {
     .cover__title {
+        width: 288px;
         font-size: 2rem;
         line-height: 35px;
     }
@@ -31,6 +31,7 @@
 
 @media screen and (min-width: 768px) {
     .cover__title {
+        width: 560px;
         font-size: 4.5rem;
         line-height: 76px;
     }
