--- a/blocks/lead/__sub-title/lead__sub-title.css
+++ b/blocks/lead/__sub-title/lead__sub-title.css
@@ -1,5 +1,5 @@
 .lead__sub-title {
-    margin: 32px 0 0 0;
+    margin: 32px auto 0 auto;
     width: 640px;
     font-size: 30px;
     font-weight: 400;
@@ -10,7 +10,7 @@
 
 @media screen and (min-width: 320px) {
     .lead__sub-title {
-        margin: 16px 0 0 0;
+        margin-top: 16px;
         width: 288px;
         font-size: 1rem;
         line-height: 20px;
@@ -35,7 +35,7 @@
 
 @media screen and (min-width: 768px) {
     .lead__sub-title {
-        margin: 32px 0 0 0;
+        margin-top: 32px;
         width: 640px;
         font-size: 30px;
         line-height: 36px;
