--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,12 +1,13 @@
   /*! Оптимизировать шрифты(сглаживание) */
   /* WRAPPER PAGE */
-  
+
   .root {
-      min-width: 320px;
-      width: 100%;
-      margin: 0 auto;
-      background-color: #2A2C2F;
-      font-family: "Inter Regular";
-      color: #FFFFFF;
-      overflow: hidden;
+    font-family: "Inter", "Arial", "Helvetica", sans-serif;
+    font-weight: 400;
+    min-width: 320px;
+    width: 100%;
+    margin: 0 auto;
+    background-color: #2A2C2F;
+    color: #FFFFFF;
+    overflow: hidden;
   }
