--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,4 +1,5 @@
 .cover__background {
+    max-width: 100%;
     margin: 0 auto;
     opacity: .3;
     -ms-grid-column: 1;
@@ -9,12 +10,22 @@
     grid-row: 1/2;
     z-index: 1;
     transition-duration: 1s;
+    opacity: .3;
 }
 
-.cover__background img {
-    max-width: 100%;
-}
-
-.cover__background:hover {
+.cover:hover .cover__background {
     opacity: .8;
+    
+}
+
+.cover__background::before {
+    content: "";
+    display: none;
+    background-color: #2A2C2F;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
 }
