--- a/blocks/cover/__sub-title/cover__sub-title.css
+++ b/blocks/cover/__sub-title/cover__sub-title.css
@@ -6,6 +6,7 @@
     line-height: 22px;
     letter-spacing: 0em;
     text-align: center;
+    cursor: pointer;
 }
 
 @media screen and (min-width: 320px) {
