--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,23 +1,24 @@
 .cover {
-    margin: 92px 48px 0 48px;
+    margin: 92px auto 0 auto;
     display: -ms-grid;
     display: grid;
-}
-
-.cover>*:nth-child(1) {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
 }
 
 
 @media screen and (min-width: 320px) {
     .cover {
-        margin: 66px 0 0 0;
+        margin-top: 66px;
     }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 768px) {
     .cover {
-        margin: 92px 48px 0 48px;
+        margin-top: 90px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .cover {
+        margin-top: 92px;
     }
 }
