--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,34 +1,30 @@
 .footer__copyright {
+    display: inline-block;
     margin: 0;
-    padding: 0;
-    font-weight: 400;
+    text-decoration: none;
+    color: #fff;
     font-size: 14px;
     line-height: 16px;
-    text-align: right;
-    text-decoration: none;
     -webkit-transition-duration: 1s;
     -o-transition-duration: 1s;
     transition-duration: 1s;
 }
 
-.footer__copyright:visited {
-    color: grey;
-}
 .footer__copyright:hover {
     border-bottom: 1px solid white;
-    transform: rotateY(360deg) scale(1.2);
+    -webkit-transform: rotateY(360deg) scale(1.1);
+    transform: rotateY(360deg) scale(1.1);
     color: #fff;
 }
 
 @media screen and (min-width: 320px) {
     .footer__copyright {
-        font-size: 14px;
-        line-height: 14px;
+        margin-top: 48px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .footer__copyright {
-        line-height: 16px;
+        margin-top: 0;
     }
 }
