--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,34 +1,24 @@
 .footer__link {
-    margin: 0 18px 0 0;
-    font-size: 16px;
-    line-height: 18px;
     color: #fff;
     text-decoration: none;
-    -webkit-transition-duration: .5s;
-    -o-transition-duration: .5s;
-    transition-duration: .5s;
-    -webkit-transition-timing-function: linear;
-    -o-transition-timing-function: linear;
-    transition-timing-function: linear;
+    font-size: 16px;
+    line-height: 18px;
 }
 
 .footer__link:hover {
-    -webkit-transform: translate(3px, -5px) scale(1.1);
-    -ms-transform: translate(3px, -5px) scale(1.1);
-    transform: translate(3px, -5px) scale(1.1);
-
+    opacity: .8;
 }
 
 @media screen and (min-width: 320px) {
     .footer__link {
-        margin: 32px 0 0 16px;
-        font-size: 16px;
-        line-height: 18px;
+        font-size: 24px;
+        line-height: 24px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .footer__link {
-        margin: 0 18px 0 0;
+        font-size: 16px;
+        line-height: 18px;
     }
 }
