--- a/blocks/footer/__menu/footer__menu.css
+++ b/blocks/footer/__menu/footer__menu.css
@@ -1,32 +1,21 @@
 .footer__menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    list-style: none;
+    padding: 0;
     margin: 0;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    justify-items: flex-start;
-    -webkit-box-align: start;
-    -ms-flex-align: start;
-    align-items: flex-start;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 768px) {
     .footer__menu {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-        flex-direction: column;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -webkit-box-align: end;
+            -ms-flex-align: end;
+                align-items: flex-end;
     }
 }
 
-@media screen and (min-width: 620px) {
-    .footer__menu {
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-        flex-direction: row;
-    }
-}
+
