--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,19 +1,11 @@
 .footer {
-    margin: 92px auto 0 auto;
-    padding: 0 48px 24px 48px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    min-height: 44px;
+    margin: 92px 48px 24px 48px;
+    max-width: 2182px;
 }
 
 @media screen and (min-width: 320px) {
     .footer {
-        margin-top: 64px;
-        padding: 0 16px 24px 16px;
+        margin: 64px 0 24px 16px;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -21,10 +13,9 @@
     }
 }
 
-@media screen and (min-width: 620px) {
+@media screen and (min-width: 768px) {
     .footer {
-        margin-top: 88px;
-        padding: 0 24px 24px 24px;
+        margin: 88px 24px 24px 24px;
         -webkit-box-orient: horizontal;
         -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -37,7 +28,6 @@
 
 @media screen and (min-width: 1024px) {
     .footer {
-        margin-top: 92px;
-        padding: 0 48px 24px 48px;
+        margin: 92px 48px 24px 48px;
     }
 }
