--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,15 +1,16 @@
 .header {
     margin: 0 auto;
+    max-width: 2182px;
     padding: 28px 48px 0 48px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
+    -ms-flex-align: end;
+    align-items: flex-end;
 }
 
 @media screen and (min-width: 320px) {
