--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,5 +1,6 @@
 .intro {
-    margin: 92px 0 0 0;
+    margin: 92px auto 0 auto;
+    max-width: 960px;
     padding: 0 0 0 148px;
     display: -ms-grid;
     display: grid;
@@ -32,6 +33,7 @@
 
 @media screen and (min-width: 1280px) {
     .intro {
-        padding-left: 148px;
+        padding-left: 0;
+        margin: 92px auto 0 auto;
     }
 }
