--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,6 +5,8 @@
     line-height: 14px;
     letter-spacing: 1.5px;
     text-align: left;
+    -ms-flex-item-align: start;
+    align-self: flex-start;
 }
 
 @media screen and (min-width: 320px) {
