--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -2,7 +2,7 @@
     font-weight: 900;
     margin: 0 auto;
     width: 720px;
-    font-size: 6rem;
+    font-size: 96px;
     line-height: 100px;
     letter-spacing: 0em;
     text-align: center;
@@ -11,31 +11,23 @@
 @media screen and (min-width: 320px) {
     .lead__title {
         width: 288px;
-        font-size: 2.5rem;
-        line-height: 44px;
-    }
-}
-
-@media screen and (min-width: 460px) {
-    .lead__title {
-        width: 350px;
-        font-size: 3.5rem;
-        line-height: 70px;
+        font-size: 48px;
+        line-height: 64px;
     }
 }
 
 @media screen and (min-width: 600px) {
     .lead__title {
         width: 500px;
-        font-size: 5rem;
-        line-height: 65px;
+        font-size: 75px;
+        line-height: 91px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .lead__title {
         width: 720px;
-        font-size: 6rem;
+        font-size: 96px;
         line-height: 100px;
     }
 }
