--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,5 +1,6 @@
                     .lead {
                         margin: 56px auto 0 auto;
+                        max-width: 984px;
                         display: -webkit-box;
                         display: -ms-flexbox;
                         display: flex;
