--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,11 +1,6 @@
 .photo-grid__item {
     margin: 0 auto;
+    width: 100%;
     -o-object-fit: cover;
-       object-fit: cover;
-    -o-object-position: center;
-       object-position: center;
-}
-
-.photo-grid__item img {
-    max-width: 100%;
+    object-fit: cover;
 }
