--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,24 +2,38 @@
     margin: 92px auto 0 auto;
     display: -ms-grid;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
+    grid-template-columns: repeat(auto-fit, 284px);
+    justify-content: center;
     gap: 16px;
 }
 
 @media screen and (min-width: 320px) {
     .photo-grid {
         margin: 64px auto 0 auto;
+        grid-template-columns: repeat(auto-fit, 288px);
     }
 }
 
 @media screen and (min-width: 768px) {
     .photo-grid {
-        margin: 88px auto 0 auto;
+        margin-top: 88px;
+        grid-template-columns: repeat(auto-fit, 352px);
+        gap: 16px;
     }
+}
+
+@media screen and (min-width: 1024px) {
+    .photo-grid {
+        margin-top: 92px;
+        grid-template-columns: repeat(auto-fit, 300px);
+        gap: 14px;
+    }
+    
 }
 
 @media screen and (width: 1280px) {
     .photo-grid {
-        margin: 92px auto 0 auto;
+        grid-template-columns: repeat(auto-fit, 284px);
+        gap: 16px;
     }
 }
