--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -1,19 +1,23 @@
 .place__description {
     margin: 0;
-    padding: 0 16px 0 0;
+    padding: 0;;
     grid-area: description;
 }
 
 @media screen and (min-width: 320px) {
     .place__description {
-        margin-top: 32px;
         padding: 0 16px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .place__description {
-        margin-top: 0;
         padding: 0 16px 0 0;
     }
+}
+
+@media screen and (min-width: 1280px) {
+    .place__description {
+        padding: 0;
+    } 
 }
