--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -9,6 +9,10 @@
     text-align: left;
 }
 
+.place__link:hover {
+    opacity: .8;
+}
+
 @media screen and (min-width: 320px) {
     .place__link {
         margin-left: 16px;
