--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,11 +1,11 @@
 .place__title {
-    font-family: "Inter Black";
+    font-family: "Inter";
     margin: 0;
     padding: 0;
     grid-area: title;
-    font-size: 4.5rem;
-    font-weight: 900;
+    font-size: 72px;
     line-height: 76px;
+    font-weight: 900;
     letter-spacing: 0em;
     text-align: left;
     align-self: flex-end;
@@ -14,7 +14,7 @@
 @media screen and (min-width: 320px) {
     .place__title {
         padding-left: 16px;
-        font-size: 2rem;
+        font-size: 32px;
         line-height: 35px;
     }
 }
@@ -22,5 +22,14 @@
 @media screen and (min-width: 768px) {
     .place__title {
         padding-left: 0;
+        font-size: 42px;
+        line-height: 46px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .place__title {
+        font-size: 72px;
+        line-height: 76px;
     }
 }
