--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,10 +1,13 @@
 .places {
-    margin: 92px 148px 0 148px;
+    margin: 92px auto 0 auto;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 @media screen and (min-width: 320px) {
     .places {
-        margin: 32px 0 0 0;
+        margin: 64px 0 0 0;
     }
 }
 
@@ -22,6 +25,6 @@
 
 @media screen and (min-width: 1280px) {
     .places {
-        margin-left: 148px;
+        margin: 92px auto 0 auto;
     }
 }
