work-on-bugs-later-review-three

--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -17,8 +17,16 @@
     }
 }
 
+@media screen and (min-width: 1024px) {
+    .lead__image {
+        margin-top: 64px;
+        max-width: 928px;
+    }
+}
+
 @media screen and (min-width: 1280px) {
     .lead__image {
         margin-top: 64px;
+        max-width: 100%;
     }
 }
