--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,30 +1,11 @@
 .cover__background {
     max-width: 100%;
-    margin: 0 auto;
-    opacity: .3;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/2;
-    z-index: 1;
-    transition-duration: 1s;
-}
-
-.cover:hover .cover__background {
-    opacity: .8;
-    
-}
-
-.cover__background::before {
-    content: "";
-    display: none;
-    background-color: #2A2C2F;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    z-index: 0;
     height: 100%;
-    opacity: 0;
+    width: 100%;
+    object-fit: contain;
+    z-index: 0;
 }
