--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,9 +1,9 @@
 .cover {
     margin: 92px auto 0 auto;
-    display: -ms-grid;
-    display: grid;
+    max-width: 1184px;
+    width: 100%;
+    box-sizing: border-box;
 }
-
 
 @media screen and (min-width: 320px) {
     .cover {
@@ -11,7 +11,7 @@
     }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 500px) {
     .cover {
         margin-top: 90px;
     }
