--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,33 +1,40 @@
-.footer {
-    margin: 92px 48px 24px 48px;
-    max-width: 2182px;
-}
-
-@media screen and (min-width: 320px) {
-    .footer {
-        margin: 64px 0 24px 16px;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-        flex-direction: column;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .footer {
-        margin: 88px 24px 24px 24px;
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-        flex-direction: row;
-        -webkit-box-align: end;
-        -ms-flex-align: end;
-        align-items: flex-end;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .footer {
-        margin: 92px 48px 24px 48px;
-    }
-}
+            .footer {
+                margin: 0 auto;
+                padding: 92px 48px 24px 48px;
+                max-width: 1280px;
+            }
+            
+            @media screen and (min-width: 320px) {
+                .footer {
+                    padding: 64px 0 24px 16px;
+                    -webkit-box-orient: vertical;
+                    -webkit-box-direction: normal;
+                    -ms-flex-direction: column;
+                    flex-direction: column;
+                }
+            }
+            
+            @media screen and (min-width: 768px) {
+                .footer {
+                    padding: 88px 24px 24px 24px;
+                    -webkit-box-orient: horizontal;
+                    -webkit-box-direction: normal;
+                    -ms-flex-direction: row;
+                    flex-direction: row;
+                    -webkit-box-align: end;
+                    -ms-flex-align: end;
+                    align-items: flex-end;
+                }
+            }
+            
+            @media screen and (min-width: 1024px) {
+                .footer {
+                    padding: 92px 48px 24px 48px;
+                }
+            }
+            
+            @media screen and (min-width: 1374px) {
+                .footer {
+                    padding: 92px 0 24px 0;
+                }
+            }
