--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -7,6 +7,7 @@
     line-height: 22px;
     letter-spacing: 0em;
     text-align: left;
+    border-bottom: 1px solid #fff;
 }
 
 .place__link:hover {
