--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,5 @@
 .place__title {
-    font-family: "Inter";
+    font-family: "Inter", "Arial", "Helvetica", sans-serif;
     margin: 0;
     padding: 0;
     grid-area: title;
