--- a/pages/index.css
+++ b/pages/index.css
@@ -15,6 +15,7 @@
 @import url(../blocks/link/link.css);
 
 /* блок MAIN */
+
 @import url(../blocks/main/main.css);
 
 /* блок HEADER */
@@ -69,6 +70,7 @@
 @import url(../blocks/cover/__headings/cover__headings.css);
 @import url(../blocks/cover/__sub-title/cover__sub-title.css);
 @import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__link/cover__link.css);
 
 /* блок FOOTER*/
 
