edit-padding-cover-footer

--- a/blocks/footer/__item-link/footer__item-link.css
+++ b/blocks/footer/__item-link/footer__item-link.css
@@ -17,6 +17,9 @@
     .footer__item-link {
         margin-top: 32px;
     }
+    .footer__item-link:first-child {
+        margin-top: 0;
+    }
 }
 
 @media screen and (min-width: 768px) {
