--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -23,6 +23,12 @@
 
 @media screen and (min-width: 1024px) {
     .lead__caption {
+        margin: 8px 0 0 24px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .lead__caption {
         margin: 8px 0 0 0;
     }
 }
